# Raccoon-MLIR-Tour

./: CMakeLists.txt  README.md  llvm-commit-version
TorchDynamo-Rough/: README.md  bytecode_example.py
backend/: CMakeLists.txt
backend/include/llvm/IR/: CMakeLists.txt  IntrinsicsRISCVRaccoonExt.td  IntrinsicsRaccoonExt.td
backend/lib/Analysis/: CMakeLists.txt
backend/lib/AsmParser/: CMakeLists.txt
backend/lib/CodeGen/: CMakeLists.txt
backend/lib/CodeGen/AsmPrinter/: CMakeLists.txt
backend/lib/CodeGen/MIRParser/: CMakeLists.txt
backend/lib/CodeGen/SelectionDAG/: CMakeLists.txt
backend/lib/IR/: CMakeLists.txt
backend/lib/IRReader/: CMakeLists.txt
backend/lib/Remarks/: CMakeLists.txt
backend/lib/Transforms/IPO/: CMakeLists.txt
backend/lib/Transforms/Scalar/: CMakeLists.txt
backend/lib/Transforms/Vectorize/: CMakeLists.txt
buddy-conv-vect-exam/: CB_exam.py
build_tools/: build_mlir.sh
cmake/: CMakeLists.txt  check_simd.cmake  check_toolchain.cmake
docs/: ChatGPT-4-Guide.md  TT-Rec.md  Transform_Dialect_TUT.md
embedding_exam/: embedding_mlir.py  embedding_numpy.py
embedding_exam/simple_embedding_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
embedding_exam/simple_embedding_model/variables/: variables.data-00000-of-00001  variables.index
embedding_exam/torchdynamo/: arith_add.py  transformer.py
embedding_exam/torchdynamo/raccoon/: compiler.py
examples/: README.md
examples/GEMM-Showcase/: README.md  affine_gemm.mlir  affine_lower_noop.mlir  affine_lower_vec.mlir  log.mlir  matmul_clang  matmul_gcc  ori_llvm.ll  vanilla_gemm.cpp
examples/GEMM-Showcase/benchmark/: README.md  dgemm-dragonpie.mlir  dgemm-tiled-benchmark.mlir  sgemm-tiled-benchmark.mlir
examples/MLIRAffine/: makefile
examples/MLIRGPU/: log.mlir  makefile  vector-to-gpu.mlir
examples/MLIRLinalg/: linalg-embedding.mlir  linalg-simple-example.mlir  linalg-temp-todo.mlir  makefile
examples/MLIRSCF/: makefile
examples/MLIRTensor/: makefile
examples/RaccoonDialect/: TestPrint.mlir  makefile
frontend/: CMakeLists.txt  README.md
frontend/FrontendGen/: CMakeLists.txt  frontendgen.cpp
frontend/FrontendGen/include/: CGModule.h  Lexer.h  Parser.h  Sema.h
frontend/FrontendGen/lib/: CMakeLists.txt  Lexer.cpp  Parser.cpp
frontend/Interfaces/raccoon/Core/: Container.h.todo
lib/Dialect/Raccoon/: CMakeLists.txt  RaccoonDialect.cpp  RaccoonOps.cpp
midend/: README.md
midend/include/Dialect/: CMakeLists.txt
midend/include/Dialect/Raccoon/: CMakeLists.txt  RaccoonDialect.h  RaccoonDialect.td  RaccoonOps.h  RaccoonOps.td
midend/lib/: CMakeLists.txt
midend/lib/Conversion/: CMakeLists.txt
midend/lib/Conversion/EmbOptimization/: CMakeLists.txt  EmbOptimize.cpp
midend/lib/Conversion/LowerRaccoon/: CMakeLists.txt  LowerRaccoonPass.cpp
simplepass/include/Simplepass/: CMakeLists.txt  Simplepass.h  Simplepass.td
simplepass/lib/Simplepass/: CMakeLists.txt
standalone-templates/: README.md
standalone-templates/simplepass/: CMakeLists.txt
standalone-templates/simplepass/include/: CMakeLists.txt
standalone-templates/simplepass/simplepass-opt/: CMakeLists.txt  simplepass-opt.cpp
standalone-templates/standalone/: README.md
standalone-templates/standalone-opt/: CMakeLists.txt  README.md  build_and_run.sh
standalone-templates/standalone/test/: lit.site.cfg.py.in
tools/: CMakeLists.txt  README.md
tools/raccoon-llc/: CMakeLists.txt
tools/raccoon-opt/: CMakeLists.txt  raccoon-opt.cpp
tools/raccoon-translate/: CMakeLists.txt  raccoon-translate.cpp
tutorial/: README.md
tutorial/ex-build/: CMakeLists.txt  ex-build.cpp
(+6 files in other folders)
